@startuml

title __FRAGMENT's Class Diagram__\n

  namespace com.yyzy.constellation {
    namespace fragment {
      class com.yyzy.constellation.fragment.LuckFragment {
          - cv : CircleImageView
          - gridView : GridView
          - mDatas : List<StarinfoDTO>
          - tv : TextView
          + onCreateView()
          - initView()
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace fragment {
      class com.yyzy.constellation.fragment.MeFragment {
          - btnConfirm : Button
          - btnFinsh : Button
          - cv : CircleImageView
          - flag : int
          - imgMap : Map<String, Bitmap>
          - mDatas : List<StarinfoDTO>
          - manager : NotificationManager
          - selectPos : int
          - spf : SharedPreferences
          - tvHuan : TextView
          - tvInfo : TextView
          - tvJie : TextView
          - tvName : TextView
          - tvNameLookup : TextView
          - tvTui : TextView
          - tvWeather : TextView
          + dialogShow()
          + onClick()
          + onCreate()
          + onCreateView()
          + onPause()
          {static} + showDialogSure()
          # findByKey()
          # insertVal()
          - initView()
          - showDialog()
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace fragment {
      class com.yyzy.constellation.fragment.PartnershipFragment {
          - adapter : ArrayAdapter<String>
          - btnGame : Button
          - btnLucky : Button
          - btnStart : Button
          - dtoList : List<StarinfoDTO>
          - imgMan : ImageView
          - imgMap : Map<String, Bitmap>
          - imgWoman : ImageView
          - logoImgMap : Map<String, Bitmap>
          - mDatas : List<String>
          - snMan : Spinner
          - snWoman : Spinner
          + onClick()
          + onCreateView()
          + onItemSelected()
          + onNothingSelected()
          - getActivityData()
          - initView()
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace fragment {
      class com.yyzy.constellation.fragment.StarFragment {
          ~ handler : Handler
          - dtoList : List<StarinfoDTO>
          - gridView : GridView
          - imgIds : int[]
          - ivList : List<ImageView>
          - linearLayout : LinearLayout
          - pointList : List<ImageView>
          - viewPager : ViewPager
          + onCreateView()
          + onPause()
          + onResume()
          - getStarData()
          - initPager()
          - initView()
          - setGvListener()
          - setVpListener()
      }
    }
  }
  

  com.yyzy.constellation.fragment.LuckFragment -up-|> androidx.fragment.app.Fragment
  com.yyzy.constellation.fragment.LuckFragment o-- com.yyzy.constellation.entity.StarInfoEntity : entity
  com.yyzy.constellation.fragment.MeFragment .up.|> android.view.View.OnClickListener
  com.yyzy.constellation.fragment.MeFragment -up-|> androidx.fragment.app.Fragment
  com.yyzy.constellation.fragment.MeFragment o-- com.yyzy.constellation.entity.StarInfoEntity : starInfoEntity
  com.yyzy.constellation.fragment.PartnershipFragment .up.|> android.view.View.OnClickListener
  com.yyzy.constellation.fragment.PartnershipFragment .up.|> android.widget.AdapterView.OnItemSelectedListener
  com.yyzy.constellation.fragment.PartnershipFragment -up-|> androidx.fragment.app.Fragment
  com.yyzy.constellation.fragment.PartnershipFragment o-- com.yyzy.constellation.entity.StarInfoEntity : info
  com.yyzy.constellation.fragment.StarFragment -up-|> androidx.fragment.app.Fragment
  com.yyzy.constellation.fragment.StarFragment o-- com.yyzy.constellation.adapter.StarItemAdapter : adapter
  com.yyzy.constellation.fragment.StarFragment o-- com.yyzy.constellation.adapter.StarPagerAdapter : starPagerAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
